--- a/Filterer/Base.lproj/Main.storyboard
+++ b/Filterer/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -99,6 +99,7 @@
                         <outlet property="compareButton" destination="QRX-dn-slF" id="Sq0-Xc-KNC"/>
                         <outlet property="filterButton" destination="nkd-AF-oov" id="kHS-rh-rD2"/>
                         <outlet property="imageView" destination="zAY-cX-Tol" id="xK0-DI-sSg"/>
+                        <outlet property="originalImageLabel" destination="2Mp-Yd-p8A" id="fL7-Ac-u5i"/>
                         <outlet property="secondaryMenu" destination="lEm-f8-U8d" id="w3f-Ly-WL8"/>
                     </connections>
                 </viewController>
@@ -157,6 +158,14 @@
                         <constraint firstAttribute="bottom" secondItem="OCq-pn-NZU" secondAttribute="bottom" id="iJ0-4N-sYY"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2Mp-Yd-p8A">
+                    <rect key="frame" x="0.0" y="0.0" width="295" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.10000000000000001" id="Jbr-Oj-ByW">
                     <connections>
                         <action selector="onImagePressAndRelease:" destination="BYZ-38-t0r" id="Xyo-ee-gtW"/>
